<resources>
    <string name="app_name">ActivityStudent</string>
    <string name="title">第一个android应用程序</string>
    <string name="sid">学号：</string>
    <string name="getSid">请输入您的学号</string>
    <string name="name">姓名：</string>
    <string name="getName">请输入您的姓名</string>
    <string name="sex">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="academy">学院：</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
</resources>